--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Roo Giftshop - Elegant Bouquets</title>
+    <title> - Elegant Bouquets</title>
     <meta name="description" content="Discover beautiful bouquets in unique shapes at Roo Giftshop" />
     <meta name="author" content="Roo Giftshop" />
 
