--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title> - Elegant Bouquets</title>
+    <title>Roo Giftshop - Elegant Bouquets</title>
     <meta name="description" content="Discover beautiful bouquets in unique shapes at Roo Giftshop" />
     <meta name="author" content="Roo Giftshop" />
 
@@ -22,7 +22,7 @@
     <nav class="navbar navbar-expand-lg fixed-top navbar-custom">
       <div class="container">
         <a class="navbar-brand playfair fw-bold text-dark-brown fs-3" href="#home">
-          Roo Giftshop
+          Roo Giftshopss
         </a>
         <button 
           class="navbar-toggler border-0" 
@@ -35,7 +35,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto align-items-center">
             <li class="nav-item">
-              <a class="nav-link text-dark-brown fw-500" href="#home">Home</a>
+              <a class="nav-link text-dark-brown fw-500" href="#home">Homess</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-dark-brown fw-500" href="#menu-section">Menu</a>
