--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <nav class="navbar navbar-expand-lg fixed-top navbar-custom">
       <div class="container">
         <a class="navbar-brand playfair fw-bold text-dark-brown fs-3" href="#home">
-          Roo Giftshopss
+          Roo Giftshop
         </a>
         <button 
           class="navbar-toggler border-0" 
@@ -35,7 +35,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto align-items-center">
             <li class="nav-item">
-              <a class="nav-link text-dark-brown fw-500" href="#home">Homess</a>
+              <a class="nav-link text-dark-brown fw-500" href="#home">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-dark-brown fw-500" href="#menu-section">Menu</a>
