--- a/index.html
+++ b/index.html
@@ -109,6 +109,29 @@
           <!-- Bouquets will be dynamically loaded here -->
         </div>
       </div>
+
+      <div class="container mt-3">
+        <div class="text-center mb-5">
+          <h2 class="playfair fw-bold text-dark-brown mb-3">Our Box Collection</h2>
+          <p class="fs-6 text-muted-gold">Choose from our signature shapes, each is handmaded with love and attention to detail</p>
+        </div>
+        
+        <div class="row g-4" id="box-grid">
+          <!-- Boxes will be dynamically loaded here -->
+        </div>
+      </div>
+
+
+      <div class="container">
+        <div class="text-center mb-5 mt-3">
+          <h2 class="playfair fw-bold text-dark-brown mb-3">Our Candel Collection</h2>
+          <p class="fs-6 text-muted-gold">Choose from our signature shapes, each is handmaded with love and attention to detail</p>
+        </div>
+        
+        <div class="row g-4" id="candel-grid">
+          <!-- Candels will be dynamically loaded here -->
+        </div>
+      </div>
     </section>
 
     <!-- Cart Modal -->
